--- a/ecommerce/cart/templates/cart/cart-summary.html
+++ b/ecommerce/cart/templates/cart/cart-summary.html
@@ -13,89 +13,91 @@
     <h1 class="h5 text-green"> Shopping cart </h1>
 
     <hr>
+    {% if cart|length > 0 %}
 
-    {% for item in cart %}
-    
-    {% with product=item.product %}
+      {% for item in cart %}
+      {% with product=item.product %}
 
-    <br>
+      <br>
 
-    <div class="row mb-4 border product-item">
+      <div class="row mb-4 border product-item">
 
-      <div class="col-md-3 col-lg-2 order-md-first bg-light">
+        <div class="col-md-3 col-lg-2 order-md-first bg-light">
 
-        <img class="img-fluid mx-auto d-block" width="200px" alt="{{ product.title }}" src="{{ product.image.url }}">
+          <img class="img-fluid mx-auto d-block" width="200px" alt="{{ product.title }}" src="{{ product.image.url }}">
 
-      </div>
+        </div>
 
 
-      <div class="col-md-9 col-lg-10 ps-md-3 ps-lg-10">
+        <div class="col-md-9 col-lg-10 ps-md-3 ps-lg-10">
 
-        <a href="{{product.get_absolute_url}}" class="text-decoration-none">
+          <a href="{{product.get_absolute_url}}" class="text-decoration-none">
 
-          <h1 class="h5 pt-2"> {{ product.title }} </h1>
+            <h1 class="h5 pt-2"> {{ product.title }} </h1>
 
-        </a>
+          </a>
 
-        <div class="border">
+          <div class="border">
 
-          <div class="col border-bottom">
+            <div class="col border-bottom">
 
-            <div class="row p-3">
+              <div class="row p-3">
 
-              <div class="col-6"> Product </div>
+                <div class="col-6"> Product </div>
 
-              <div class="col-6 text-end"><span class="h6 fw-bold">$ {{ product.price|mul:item.qty }} </span></div>
+                <div class="col-6 text-end"><span class="h6 fw-bold">$ {{ product.price|mul:item.qty }} </span></div>
+
+              </div>
 
             </div>
 
-          </div>
+            <div class="col">
 
-          <div class="col">
+              <div class="row p-3">
 
-            <div class="row p-3">
+                <div class="col-12">
 
-              <div class="col-12">
+                  <label for="select">Qty:</label>
 
-                <label for="select">Qty:</label>
+                  &nbsp;
 
-                &nbsp;
+                  <select id="select{{product.id}}">
 
-                <select id="select{{product.id}}">
+                    <option selected>
+                      {{item.qty}}
+                    </option>
 
-                  <option selected>
-                    {{item.qty}}
-                  </option>
+                    <option value="1">1</option>
+                    
+                    <option value="2">2</option>
 
-                  <option value="1">1</option>
-                  
-                  <option value="2">2</option>
+                    <option value="3">3</option>
 
-                  <option value="3">3</option>
+                    <option value="4">4</option>
 
-                  <option value="4">4</option>
+                  </select>
 
-                </select>
+                  <br> <br>
 
-                <br> <br>
+                  <button
+                    data-index="{{product.id}}"
+                    type="button"
+                    class="btn btn-primary btn-sm update-button">
+                      Update
 
-                <button
-                  data-index="{{product.id}}"
-                  type="button"
-                  class="btn btn-primary btn-sm update-button">
-                    Update
+                  </button>
 
-                </button>
+                  &nbsp;
 
-                &nbsp;
+                  <button 
+                    data-index="{{product.id}}"
+                    type="button" 
+                    class="btn btn-danger btn-sm delete-button">
+                      Delete
+                  </button>
 
-                <button 
-                  data-index="{{product.id}}"
-                  type="button" 
-                  class="btn btn-danger btn-sm delete-button">
-                    Delete
-                </button>
 
+                </div>
 
               </div>
 
@@ -107,17 +109,19 @@
 
       </div>
 
-    </div>
+      {% endwith %}
 
-    {% endwith %}
-
-    {% endfor %}
-
-
-    <div class="col-12 text-end">
-
-      <div class="h6 fw-bold"> Sub total: $ <div id="total" class="d-inline-flex"> {{ cart.total }} </div>
+      {% endfor %}
+      
+      <div class="col-12 text-end">
+        
+        <div class="h6 fw-bold"> Sub total: $ <div id="total" class="d-inline-flex"> {{ cart.total }} </div>
       </div>
+      {% else %}
+        <h4 class="lead text-muted text-center">Your bag is empty. <br>
+          Have an account? Sign in to view your bag.
+        </h4>
+      {% endif %}
 
     </div>
 
@@ -140,7 +144,7 @@ $(document).on('click', '.delete-button', function(e) {
 
       success: (json) => {
             
-        location.reload();
+        location.reload(true)
         document.getElementById('cart-qty').textContent = json.quantity;
         document.getElementById('total').textContent = json.total;
       
@@ -171,7 +175,7 @@ $(document).on('click', '.update-button', function(e) {
 
     success: (json) => {
           
-      //location.reload();
+      location.reload(true)
       document.getElementById('cart-qty').textContent = json.quantity;
       document.getElementById('total').textContent = json.total;
     
