--- a/ecommerce/store/templates/store/index.html
+++ b/ecommerce/store/templates/store/index.html
@@ -12,7 +12,7 @@
         Browse our extensive collection.
       </p>
       <br>
-      <a href="#" class="btn btn-primary my-2"> Create an account </a>
+      <a href="{% url 'sign-up' %}" class="btn btn-primary my-2"> Create an account </a>
     </div>
   </div>
 </section>
