--- a/ecommerce/store/templates/store/base.html
+++ b/ecommerce/store/templates/store/base.html
@@ -56,7 +56,7 @@
   <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
     <ul class="navbar-nav ms-auto">
       <li class="nav-item">
-        <a class="btn btn-alert navbar-btn text-white" type="button" href="/"> Sign up </a>
+        <a class="btn btn-alert navbar-btn text-white" type="button" href="{% url 'sign-up' %}"> Sign up </a>
       </li>
 
       <li class="nav-item">
