--- a/ecommerce/account/templates/account/registration/email-verification.html
+++ b/ecommerce/account/templates/account/registration/email-verification.html
@@ -1,1 +1,28 @@
-ht
+{% autoescape off %}
+  
+<body class="bg-light">
+  <div class="container">
+    <img class="ax-center my-10 w-24" src="https://assets.bootstrapemail.com/logos/light/square.png" />
+    <div class="card p-6 p-lg-10 space-y-4">
+      <h1 class="h3 fw-700">
+        Hi {{user.email}}, 
+      </h1>
+      <p>
+        thank you for registering on our website 
+
+        Please be so kind as to verify your email by clicking the link below:
+      
+        http://{{domain}}{% url 'email-verification' uidb64=uid token=token %}
+      </p>
+      <a class="btn btn-primary p-3 fw-700" href="https://app.bootstrapemail.com/templates">Visit Website</a>
+    </div>
+    <img class="ax-center mt-10 w-40" src="https://assets.bootstrapemail.com/logos/light/text.png" />
+    <div class="text-muted text-center my-6">
+      Sent with <3 from Hip Corp. <br>
+      Hip Corp. 1 Hip Street<br>
+      Gnarly State, 01234 USA <br>
+    </div>
+  </div>
+</body>
+
+{% endautoescape %}
