--- a/ecommerce/store/templates/store/base.html
+++ b/ecommerce/store/templates/store/base.html
@@ -60,7 +60,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="btn btn-alert navbar-btn text-white" type="button" href="/"> Sign in </a>
+        <a class="btn btn-alert navbar-btn text-white" type="button" href="{% url 'sign-in' %}"> Sign in </a>
       </li>
       &nbsp; &nbsp; &nbsp;
       <li class="nav-item">
