--- a/ecommerce/account/templates/account/dashboard.html
+++ b/ecommerce/account/templates/account/dashboard.html
@@ -29,7 +29,7 @@
         <hr>
         <div class="d-flex flex-row justify-content-between">
           <a class="btn btn-danger navbar-btn text-white" type="button" href="{% url 'sign-out' %}"> Sign out </a>
-          <a class="btn btn-primary navbar-btn text-white" type="button" href="{% url 'sign-out' %}"> Profile Management </a>
+          <a class="btn btn-primary navbar-btn text-white" type="button" href="{% url 'profile-management' %}"> Profile Management </a>
 
         </div>
       </div>
