--- a/ecommerce/account/templates/account/delete-account.html
+++ b/ecommerce/account/templates/account/delete-account.html
@@ -16,7 +16,10 @@
           <form method="POST" autocomplete="off">
             {% csrf_token %}
             <p> This action is permanent. Proceed if you wish to delete your account </p>
-            <button type="submit" class="btn btn-danger btn-lg w-100 btn-block p-2 mt-4"> Delete</button>
+            <div class="d-flex gap-2">
+              <button type="submit" class="btn btn-danger btn-lg w-100 btn-block p-2 mt-4"> Delete</button>
+              <a class="btn btn-primary btn-lg w-100 btn-block p-2 mt-4" href="{% url 'profile-management' %}"> Go back </a>
+            </div>
           </form>
         </div>
       </div>
