--- a/ecommerce/account/templates/account/profile-management.html
+++ b/ecommerce/account/templates/account/profile-management.html
@@ -10,9 +10,10 @@
 <body class="bg-secondary">
   <br>
   <div class="container bg-white shadow-md p-5 mb-4">
+    <h3 class="text-center">Profile Management</h3>
     <div class="row">
       <div class="col-md-6 p-4 m-2 border">
-        <h3>Update your account</h3>
+        <h4>Update your account</h4>
           <hr>          
           <form method="POST" autocomplete="off">
           
@@ -26,7 +27,7 @@
           </form>
       </div>
       <div class="col p-4 m-2 border">
-        <h3>Delete your account</h3>
+        <h4>Delete your account from the system</h4>
         <hr>          
         <div class="d-flex flex-row justify-content-between">
           <a class="btn btn-danger navbar-btn text-white" type="button" href="{% url 'delete-account' %}"> Delete your account </a>
