body tag closed

--- a/ecommerce/account/templates/account/sign-in.html
+++ b/ecommerce/account/templates/account/sign-in.html
@@ -32,7 +32,7 @@
           </form>
           <div class="d-flex justify-content-between mt-2">
             <a class="text-decoration-underline" href="{% url 'sign-up' %}">Don't have an account?</a>
-            <a class="text-decoration-underline" href="{% url 'sign-in' %}">Forgotten password?</a>
+            <a class="text-decoration-underline" href="{% url 'reset-password' %}">Forgotten password?</a>
           </div>
         </div>
       </div>
