--- a/ecommerce/account/templates/account/dashboard.html
+++ b/ecommerce/account/templates/account/dashboard.html
@@ -26,6 +26,7 @@
       <div class="col p-4 m-2 border">
         <h4> Manage your account </h4>
         <hr>
+        <p>Update or delete your account</p>
         <div class="d-flex flex-row justify-content-between">
           <a class="btn btn-primary navbar-btn text-white" type="button" href="{% url 'profile-management' %}"> Profile Management </a>
 
@@ -34,18 +35,25 @@
     </div>
     
     <div class="row mt-2">
-      <div class="col">
-        <h4> Track your orders </h4>
+      <div class="col-md-6 p-4 m-2 border">
+        <h4> Track your Orders </h4>
+        <hr>      
+        <ul>
+          <li> Track your orders </li>
+          <li> Track your account </li>
+        </ul>
+        <div class="d-flex flex-row justify-content-between">
+          <a class="btn btn-primary navbar-btn text-white" type="button" href="{% url 'manage-shipping' %}"> Orders </a>
+        </div>
+      </div>
+      <div class="col p-4 m-2 border">
+        <h4> Manage your shipping </h4>
         <hr>
-        <li>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam autem, omnis quod, maxime ipsum nesciunt nostrum consequuntur.
-        </li>
-        <li>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam autem, omnis quod, maxime ipsum nesciunt nostrum consequuntur.
-        </li>
-        <li>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam autem, omnis quod, maxime ipsum nesciunt nostrum consequuntur.
-        </li>
+        <p>Enter in a shipping address </p>
+        <div class="d-flex flex-row justify-content-between">
+          <a class="btn btn-primary navbar-btn text-white" type="button" href="{% url 'manage-shipping' %}"> Shipping </a>
+
+        </div>
       </div>
     </div>
   </div>
