--- a/ecommerce/cart/templates/cart/cart-summary.html
+++ b/ecommerce/cart/templates/cart/cart-summary.html
@@ -116,7 +116,12 @@
       <div class="col-12 text-end">
         
         <div class="h6 fw-bold"> Sub total: $ <div id="total" class="d-inline-flex"> {{ cart.total }} </div>
+        
       </div>
+      <div class="mb-8">
+        <a href="{% url 'checkout' %}" class="btn btn-primary"> Proceed to checkout </a>
+      </div>
+
       {% else %}
         <h4 class="lead text-muted text-center">Your bag is empty. <br>
           Have an account? Sign in to view your bag.
