--- a/ecommerce/payment/templates/payment/checkout.html
+++ b/ecommerce/payment/templates/payment/checkout.html
@@ -14,34 +14,35 @@
 				<hr>
 				<p> Please enter in the relevant information below. </p>
 				<div class="col-md-6">
-					<label for="inputEmail4" class="form-label">Email</label>
-					<input type="email" class="form-control" id="inputEmail4">
+					<label for="name" class="form-label">Full Name</label>
+					<input type="text" id="name" class="form-control" value="{{shipping.full_name}}">
 				</div>
 				<div class="col-md-6">
-					<label for="inputPassword4" class="form-label">Password</label>
-					<input type="password" class="form-control" id="inputPassword4">
+					<label for="email" class="form-label">Email Address </label>
+					<input type="email" class="form-control" id="email" value="{{shipping.email}}">
 				</div>
 				<div class="col-12">
-					<label for="inputAddress" class="form-label">Address</label>
-					<input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+					<label for="email" class="form-label">First Address </label>
+					<input type="text" class="form-control" id="first_address" name="first_address" value="{{shipping.first_address}}">
 				</div>
 				<div class="col-12">
-					<label for="inputAddress2" class="form-label">Address 2</label>
-					<input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+					<label for="email" class="form-label">Second Address </label>
+					<input type="text" class="form-control" id="second_address" name="second_address" value="{{shipping.second_address}}">
 				</div>
 				<div class="col-md-6">
-					<label for="inputCity" class="form-label">City</label>
-					<input type="text" class="form-control" id="inputCity">
+					<label for="city" class="form-label">City</label>
+					<input type="text" class="form-control" id="city" name="city" value="{{shipping.city}}">
 				</div>
 				<div class="col-md-4">
 					<label for="state" class="form-label">State</label>
-					<input type="text" class="form-control" id="state">
+					<input type="text" class="form-control" id="state" name="state" value="{{shipping.state}}">
 				</div>
 				<div class="col-md-2">
-					<label for="inputZip" class="form-label">Zip</label>
-					<input type="text" class="form-control" id="inputZip">
+					<label for="zipcode" class="form-label">Zip</label>
+					<input type="text" class="form-control" id="zipcode" name="zipcode" value="{{shipping.zipcode}}">
 				</div>
-				<div class="col-6">
+				
+				<div class="col-6 mt-4">
 					<button type="submit" class="btn btn-primary w-100">Complete Order</button>
 				</div>
 			</form>
