--- a/ecommerce/payment/templates/payment/checkout.html
+++ b/ecommerce/payment/templates/payment/checkout.html
@@ -9,29 +9,30 @@
 	<body class="bg-secondary">
 		<br>
 		<div class="container bg-white shadow-md p-5 form-layout-shipping mb-4">
-			<form class="row g-2">
+			<form class="row g-2" method="POST" autocomplete="off">
+				{% csrf_token %}
 				<h3> <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> Complete your order </h3>
 				<hr>
 				<p> Please enter in the relevant information below. </p>
 				<div class="col-md-6">
 					<label for="name" class="form-label">Full Name</label>
-					<input type="text" id="name" class="form-control" value="{{shipping.full_name}}">
+					<input type="text" id="name" class="form-control" value="{{shipping.full_name}}" required>
 				</div>
 				<div class="col-md-6">
 					<label for="email" class="form-label">Email Address </label>
-					<input type="email" class="form-control" id="email" value="{{shipping.email}}">
+					<input type="email" class="form-control" id="email" value="{{shipping.email}}" required>
 				</div>
 				<div class="col-12">
 					<label for="email" class="form-label">First Address </label>
-					<input type="text" class="form-control" id="first_address" name="first_address" value="{{shipping.first_address}}">
+					<input type="text" class="form-control" id="first_address" name="first_address" value="{{shipping.first_address}}" required>
 				</div>
 				<div class="col-12">
 					<label for="email" class="form-label">Second Address </label>
-					<input type="text" class="form-control" id="second_address" name="second_address" value="{{shipping.second_address}}">
+					<input type="text" class="form-control" id="second_address" name="second_address" value="{{shipping.second_address}}" required>
 				</div>
 				<div class="col-md-6">
 					<label for="city" class="form-label">City</label>
-					<input type="text" class="form-control" id="city" name="city" value="{{shipping.city}}">
+					<input type="text" class="form-control" id="city" name="city" value="{{shipping.city}}" required>
 				</div>
 				<div class="col-md-4">
 					<label for="state" class="form-label">State</label>
@@ -43,7 +44,7 @@
 				</div>
 				
 				<div class="col-6 mt-4">
-					<button type="submit" class="btn btn-primary w-100">Complete Order</button>
+					<button type="submit" class="btn btn-primary w-100" >Complete Order</button>
 				</div>
 			</form>
 		</div>
@@ -59,11 +60,34 @@
 
 
 <script>
+  $(document).on('submit', (e) => {
+    e.preventDefault();
+    $.ajax({
+      type: 'POST',
+      url: '{% url "complete-order" %}',
+      data: {
+        name: $('#name').val(),
+        email: $('#email').val(),
+        first_address: $('#first_address').val(),
+        second_address: $('#second_address').val(),
+        city: $('#city').val(),
+        state: $('#state').val(),
+        zipcode: $('#zipcode').val(),
+        csrfmiddlewaretoken: '{{csrf_token}}',
+        action: 'post'
+      },
 
+      success: (json) => {
+				window.location.replace("{% url 'payment-success' %}")
+      },
 
+      error: (xhr, errmsg, err) => {
+        console.log({err}, {errmsg});
+				window.location.replace("{% url 'payment-failed' %}")
 
-
-
+      }
+    })
+  })
 </script>
 
 
