--- a/ecommerce/payment/templates/payment/checkout.html
+++ b/ecommerce/payment/templates/payment/checkout.html
@@ -10,31 +10,31 @@
 		<br>
 		<div class="container bg-white shadow-md p-5 mb-4 rounded">
 			<div class="row">
-				<div class="col-8 border-end">
-					<form class="row g-2" method="POST" autocomplete="off">
+				<div class="col-md-8 border-end mb-2">
+					<form id="checkout_form" class="row g-2" method="POST" autocomplete="off" onsubmit="event.preventDefault();">
 						{% csrf_token %}
 						<h3> <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> Complete your order </h3>
 						<hr>
 						<p> Please enter in the relevant information below. </p>
 						<div class="col-md-6">
-							<label for="name" class="form-label">Full Name</label>
-							<input type="text" id="name" class="form-control" value="{{shipping.full_name}}" required>
+							<label for="name" class="form-label">Full Name* </label>
+							<input type="text" id="name" class="form-control validate" value="{{shipping.full_name}}" required>
 						</div>
 						<div class="col-md-6">
-							<label for="email" class="form-label">Email Address </label>
-							<input type="email" class="form-control" id="email" value="{{shipping.email}}" required>
+							<label for="email" class="form-label">Email Address* </label>
+							<input type="email" class="form-control validate" id="email" value="{{shipping.email}}" required>
 						</div>
 						<div class="col-12">
-							<label for="email" class="form-label">First Address </label>
-							<input type="text" class="form-control" id="first_address" name="first_address" value="{{shipping.first_address}}" required>
+							<label for="email" class="form-label">First Address* </label>
+							<input type="text" class="form-control validate" id="first_address" name="first_address" value="{{shipping.first_address}}" required>
 						</div>
 						<div class="col-12">
-							<label for="email" class="form-label">Second Address </label>
-							<input type="text" class="form-control" id="second_address" name="second_address" value="{{shipping.second_address}}" required>
+							<label for="email" class="form-label">Second Address* </label>
+							<input type="text" class="form-control validate" id="second_address" name="second_address" value="{{shipping.second_address}}" required>
 						</div>
 						<div class="col-md-6">
-							<label for="city" class="form-label">City</label>
-							<input type="text" class="form-control" id="city" name="city" value="{{shipping.city}}" required>
+							<label for="city" class="form-label">City* </label>
+							<input type="text" class="form-control validate" id="city" name="city" value="{{shipping.city}}" required>
 						</div>
 						<div class="col-md-4">
 							<label for="state" class="form-label">State</label>
@@ -44,13 +44,9 @@
 							<label for="zipcode" class="form-label">Zip</label>
 							<input type="text" class="form-control" id="zipcode" name="zipcode" value="{{shipping.zipcode}}">
 						</div>
-						
-						<div class="col-6 mt-4">
-							<button type="submit" class="btn btn-primary w-100" >Complete Order</button>
-						</div>
 					</form>
 				</div>
-				<div class="col-4">
+				<div class="col-md-4">
 					<h3> <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> Paid Here </h3>
 					<hr>
 					<p> This is a secure manner of pay. </p>
@@ -67,7 +63,7 @@
 	<script src="{% static 'js/checkout.js' %}"></script>
 	<script>
 		
-  $(document).on('submit', (e) => {
+/*  $(document).on('submit', (e) => {
     e.preventDefault();
     $.ajax({
       type: 'POST',
@@ -94,6 +90,7 @@
       }
     })
   })
+		*/
 </script>
 
 
