managing paypal with ajax checkout

--- a/ecommerce/payment/templates/payment/checkout.html
+++ b/ecommerce/payment/templates/payment/checkout.html
@@ -60,41 +60,148 @@
 	
 	<!-- PayPal client ID integration -->
 	<script src="https://www.paypal.com/sdk/js?client-id=AX6exZRsedQrN_vEeklKjkPsTm3dX3RW3ssHsalhB2ZevZP2fVPU-sguPaQUGqG1-fjDXeaeeQPElZRo&currency=USD&intent=capture&disable-funding=paylater" data-sdk-integration-source="integrationbuilder"></script>
-	<script src="{% static 'js/checkout.js' %}"></script>
 	<script>
+		const totalPrice = '{{cart.total}}';
+		const paypalButtonsComponent = paypal.Buttons({
+
+			style: {
+				color: "blue",
+				shape: "rect",
+				layout: "vertical"
+			},
 		
-/*  $(document).on('submit', (e) => {
-    e.preventDefault();
-    $.ajax({
-      type: 'POST',
-      url: '{% url "complete-order" %}',
-      data: {
-        name: $('#name').val(),
-        email: $('#email').val(),
-        first_address: $('#first_address').val(),
-        second_address: $('#second_address').val(),
-        city: $('#city').val(),
-        state: $('#state').val(),
-        zipcode: $('#zipcode').val(),
-        csrfmiddlewaretoken: '{{csrf_token}}',
-        action: 'post'
-      },
+			onInit: function( data, actions ) {
+	
+				actions.disable();
 
-      success: (json) => {
-				window.location.replace("{% url 'payment-success' %}")
-      },
+				/* Complete order -- no Shipping */
+				document.querySelectorAll('.validate').forEach( element => {
+		
+					element.addEventListener('keyup', event => {
+						
+						let orderVerified = true;
+		
+						function checkInputs() {
+		
+							$(':input[required]').each(function(){
+		
+								if ($(this).val() == '') {
+	
+									return orderVerified = false;  
+		
+								}
+		
+							});
+							return orderVerified;
+						}
+		
+						let isOrderVerified = checkInputs();
+		
+						if ( isOrderVerified ) {
+		
+							actions.enable();
+		
+						}
+						else {
+	
+							actions.disable();
+		
+						}
+		
+					});
+		
+				});
 
-      error: (xhr, errmsg, err) => {
-				window.location.replace("{% url 'payment-failed' %}")
+				/*With Shipping*/
 
-      }
-    })
-  })
-		*/
-</script>
+				let orderVerified = true;
+		
+				function checkInputs() {
 
+					$(':input[required]').each(function(){
 
+						if ($(this).val() == '') {
 
+							return orderVerified = false;  
 
+						}
+
+					});
+					return orderVerified;
+				}
+
+				let isOrderVerified = checkInputs();
+
+				if ( isOrderVerified ) {
+
+					actions.enable();
+
+				}
+				else {
+
+					actions.disable();
+
+				}
+		
+			},
+			createOrder: (data, actions) => {
+				const createOrderPayload = {
+					purchase_units: [
+						{
+							amount: {
+								value: totalPrice
+							}
+						}
+					]
+				};
+		
+				return actions.order.create(createOrderPayload);
+			},
+			onApprove: (data, actions) => {
+				const captureOrderHandler = (details) => {
+					const payerName = details.payer.name.given_name;
+					console.log('Transaction completed');
+
+					$.ajax({
+						type: 'POST',
+						url: '{% url "complete-order" %}',
+						data: {
+							name: $('#name').val(),
+							email: $('#email').val(),
+							first_address: $('#first_address').val(),
+							second_address: $('#second_address').val(),
+							city: $('#city').val(),
+							state: $('#state').val(),
+							zipcode: $('#zipcode').val(),
+							csrfmiddlewaretoken: '{{csrf_token}}',
+							action: 'post'
+						},
+	
+						success: (json) => {
+							window.location.replace("{% url 'payment-success' %}")
+						},
+	
+						error: (xhr, errmsg, err) => {
+							window.location.replace("{% url 'payment-failed' %}")
+	
+						}
+					});
+				};
+				return actions.order.capture().then(captureOrderHandler);
+			},
+
+			onError: (err) => {
+				console.error('An error prevented the buyer from checking out with PayPal');
+		
+			}
+		});
+	
+		paypalButtonsComponent
+			.render("#paypal-button-container")
+			.catch((err) => {
+				console.error('PayPal Buttons failed to render');
+			});
+	
+	</script>
 
 {% endblock %}
