--- a/ecommerce/account/templates/account/dashboard.html
+++ b/ecommerce/account/templates/account/dashboard.html
@@ -38,12 +38,9 @@
       <div class="col-md-6 p-4 m-2 border">
         <h4> Track your Orders </h4>
         <hr>      
-        <ul>
-          <li> Track your orders </li>
-          <li> Track your account </li>
-        </ul>
+          <p> Track all of your orders </p>
         <div class="d-flex flex-row justify-content-between">
-          <a class="btn btn-primary navbar-btn text-white" type="button" href="{% url 'manage-shipping' %}"> Orders </a>
+          <a class="btn btn-primary navbar-btn text-white" type="button" href="{% url 'track-orders' %}"> Orders </a>
         </div>
       </div>
       <div class="col p-4 m-2 border">
