--- a/ecommerce/account/templates/account/manage-shipping.html
+++ b/ecommerce/account/templates/account/manage-shipping.html
@@ -42,6 +42,11 @@
             </div>
             <div class="col-6">
               <button type="submit" class="btn btn-primary w-100">Update Shipping</button>
+              
+            </div>
+            <div class="col-6">
+              <a class="btn btn-primary w-100 btn-block" href="{% url 'dashboard' %}"> Go back </a>
+
             </div>
           </form>
         </div>
